--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data:init": "node backend/config/createDB",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d "
+
   },
   "repository": {
     "type": "git",
@@ -32,4 +36,5 @@
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15"
   }
+
 }
